--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-S3411107076
-陳怡伶
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>國立台中科技大學</title>
+</head>
+<body>
+    <h1>
+        陳怡伶<br>
+        3411107076 
+    </h1>
+    <hr>   
+    <!-- 456 -->
+</body>
+</html>
