--- a/demo.html
+++ b/demo.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>段落(p)</h2>
+    <h2 id="up"> 段落(p)</h2>
     <p>我是段落</p>
     <hr>
     <h2>標籤(span)</h2>
-    <span style="color: blue;">國立</span><span style="color: aqua;">台中</span><span style="color: rgb(142, 199, 77);">科技</span><span style="color: rgb(29, 88, 88);">大學</span>
+    <span style="color: blue;">國立</span><span style="color: rgb(102, 184, 184);">台中</span><span style="color: rgb(140, 168, 108);">科技</span><span style="color: rgb(101, 151, 192);">大學</span>
     <hr>
     <h2>換行(br)</h2>
     123 <br>
@@ -33,6 +33,31 @@
     <sup>上標</sup><br>
     <ins>新增標示</ins><br>
     <del>刪除標示</del><br>
+    <mark>標示</mark><br>
     <hr>
+    <h2>超連結(a)</h2>
+    <a href="https://www.youtube.com/results?search_query=%E8%A0%9F%E7%AD%86%E5%B0%8F%E6%96%B0">蠟筆小星星</a>
+    <!-- 另開視窗 -->
+    <a href="https://www.youtube.com/results?search_query=%E8%A0%9F%E7%AD%86%E5%B0%8F%E6%96%B0" target="_blank">蠟筆小星星</a>
+    <!-- br*10 -->
+    <br><br><br><br><br><br><br><br><br><br>
+    <!-- 錨點 -->
+    <a href="#up">移到最上面</a>
+    <hr>
+    <h2>圖片(img)</h2>
+    <img src="https://cdn-icons-png.flaticon.com/512/2179/2179088.png" alt= "width="150" height="200">
+    <img src="ccc.png" alt=""width="125" height="125">
+    <hr>
+    <h2>列表(o1 u1)</h2>
+    <ul type="square">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+    <ol type="I">
+        <li>A</li>
+        <li>B</li>
+        <li>C</li>
+    </ol>
 </body>
 </html>
