--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <hr>   
     <a href="demo.html">元件介紹</a>
     <a href="table.html">表格練習</a>
-    <a href="css.html">CSS選擇器</a>
+    <a href="css.html">css選擇器</a>
     
 </body>
 </html>
